<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.example.trabalhounidade01.viewmodel.TelaConfiguracoesActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="viewEnd"
        android:background="@drawable/zyroimage"
        tools:context=".activity.MainActivity">

        <ImageButton
            android:id="@+id/imgtabuleigrande"
            android:layout_width="85dp"
            android:layout_height="84dp"
            android:background="#CF3838"
            android:backgroundTint="#BF4E4E"
            android:foreground="@drawable/tabuleiro"
            android:onClick="@{() -> viewmodel.mudarTamanhoMapa(2)}"
            app:bt_idmap="@{2}"
            app:bt_tamanhoMapa="@{viewmodel.tipoMapa}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.829"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.658"
            app:srcCompat="@drawable/pngvazio" />

        <TextView
            android:id="@+id/idtabuleirogrande"
            android:layout_width="69dp"
            android:layout_height="18dp"
            android:fontFamily="@font/caesar_dressing"
            android:text="@string/grande"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.826"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.723" />

        <TextView
            android:id="@+id/idtabuleironormal"
            android:layout_width="69dp"
            android:layout_height="18dp"
            android:fontFamily="@font/caesar_dressing"
            android:text="@string/normal"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.289"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.72" />

        <TextView
            android:id="@+id/idtitulotamanhodomapa"
            android:layout_width="229dp"
            android:layout_height="35dp"
            android:fontFamily="@font/caesar_dressing"
            android:text="@string/tamanho_do_mapa"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.642"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.525" />

        <TextView
            android:id="@+id/idtitulodificuldade"
            android:layout_width="149dp"
            android:layout_height="59dp"
            android:fontFamily="@font/caesar_dressing"
            android:text="@string/dificuldade"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.549"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.199" />

        <TextView
                android:id="@+id/idtitulofacil"
                android:layout_width="44dp"
                android:layout_height="20dp"
                android:fontFamily="@font/caesar_dressing"
                android:text="@string/f_cil"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.207"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.378" />

            <TextView
                android:id="@+id/idtitulodificil"
                android:layout_width="62dp"
                android:layout_height="23dp"
                android:fontFamily="@font/caesar_dressing"
                android:text="@string/d_ficl"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.876"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.378" />

            <TextView
                android:id="@+id/idtitulomedio"
                android:layout_width="44dp"
                android:layout_height="20dp"
                android:fontFamily="@font/caesar_dressing"
                android:text="@string/m_dio"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.525"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.378" />

        <ImageButton
            android:id="@+id/imgFacil"
            android:layout_width="73dp"
            android:layout_height="84dp"
            android:foreground="@drawable/snakefacil"
            android:onClick="@{() -> viewmodel.mudarDificuldade(1)}"
            app:bt_dificuldade="@{viewmodel.dificuldade}"
            app:bt_id="@{1}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.183"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.285"
            app:srcCompat="@drawable/pngvazio" />

        <ImageButton
            android:id="@+id/imgMedio"
            android:layout_width="73dp"
            android:layout_height="71dp"
            android:background="#BD2C2C"
            android:foreground="@drawable/snakemedio"
            android:onClick="@{() -> viewmodel.mudarDificuldade(2)}"
            app:bt_dificuldade="@{viewmodel.dificuldade}"
            app:bt_id="@{2}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.292"
            app:srcCompat="@drawable/pngvazio" />

        <ImageButton
            android:id="@+id/imgDificil"
            android:layout_width="73dp"
            android:layout_height="75dp"
            android:foreground="@drawable/snakedificil"
            android:onClick="@{() -> viewmodel.mudarDificuldade(3)}"
            app:bt_dificuldade="@{viewmodel.dificuldade}"
            app:bt_id="@{3}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.866"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.288"
            app:srcCompat="@drawable/pngvazio" />

        <Button
            android:id="@+id/botaovoltar"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="238dp"
            android:layout_height="104dp"
            android:fontFamily="@font/bangers"
            android:text="@string/voltar"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFC107"
            android:textColorHint="#9C27B0"
            android:textSelectHandle="@drawable/pngvazio"
            android:textSize="48sp"
            android:textStyle="bold|italic"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.921" />

        <ImageButton
            android:id="@+id/imgtabuleironormal"
            android:layout_width="83dp"
            android:layout_height="73dp"
            android:foreground="@drawable/tabuleiro"
            android:onClick="@{() -> viewmodel.mudarTamanhoMapa(1)}"
            app:bt_idmap="@{1}"
            app:bt_tamanhoMapa="@{viewmodel.tipoMapa}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.262"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.658"
            app:srcCompat="@drawable/pngvazio" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>



