<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="viewEnd"
        android:background="@drawable/zyroimage"
        tools:context=".activity.MainActivity">

        <Button
            android:id="@+id/botaoNovoJogo"
            android:layout_width="126dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/teal_200"
            android:fontFamily="@font/caesar_dressing"
            android:text="@string/novo_jogo"
            android:textAllCaps="true"
            android:textColor="@color/black"
            app:icon="@color/purple_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.686" />

        <Button
            android:id="@+id/botaoContinuar"
            android:layout_width="136dp"
            android:layout_height="47dp"
            android:backgroundTint="@color/teal_200"
            android:fontFamily="@font/caesar_dressing"
            android:text="@string/continuar"
            android:textAllCaps="true"
            android:textColor="@color/black"
            app:icon="@color/purple_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.788"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/botaoConfiguracao"
            android:layout_width="157dp"
            android:layout_height="43dp"
            android:backgroundTint="@color/teal_200"
            android:fontFamily="@font/caesar_dressing"
            android:text="@string/configuracoes"
            android:textAllCaps="true"
            android:textColor="@color/black"
            app:icon="@color/purple_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.879" />

        <ImageView
            android:id="@+id/snakeprincipal"
            android:layout_width="406dp"
            android:layout_height="372dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.41"
            app:srcCompat="@drawable/snakebits" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="70dp"
            android:layout_height="74dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.099"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.96"
            app:srcCompat="@drawable/flor" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="38dp"
            android:layout_height="22dp"
            android:background="#00FFFFFF"
            android:foreground="@drawable/euapixel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.903"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.063"
            app:srcCompat="@drawable/pngvazio" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="36dp"
            android:layout_height="22dp"
            android:background="#00FFFFFF"
            android:foreground="@drawable/brasilpixel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.757"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.063"
            app:srcCompat="@drawable/pngvazio" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>